# PersianLegalAITraining-System

./: .env.local.example  .env.production  .env.production.example  .gitignore  AUTOMATED_SETUP_GUIDE.md  BACKEND_INFRASTRUCTURE_ANALYSIS_REPORT.md  BOLT_INTEGRATION_COMPLETE.md  COMPREHENSIVE_PROJECT_AUDIT_REPORT.md  COMPREHENSIVE_TECHNICAL_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DETAILED_TEST_REPORT.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.production  FRONTEND_RECOVERY_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATED_VERCEL_DEPLOYMENT_GUIDE.md  INTEGRATION_COMPLETE_REPORT.md  IRANIAN_LEGAL_ARCHIVE_SYSTEM.md  MERGE_COMPLETION_SUMMARY.md  ORGANIZATION_COMPLETION_SUMMARY.md  ORGANIZATION_SCRIPT_README.md  ORGANIZATION_SYSTEM_README.md  PERSIAN_LEGAL_AI_COMPREHENSIVE_AUDIT_REPORT.md  PERSIAN_LEGAL_AI_DEPLOYMENT_FIX_COMPLETION_REPORT.md  PERSIAN_LEGAL_AI_VERCEL_INTEGRATION_COMPLETE.md  PHASE_CRITICAL_PRODUCTION_ISSUES_RESOLVED.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  RAPID_TRAINING_GUIDE.md  README.md  START_SYSTEM.md  SYSTEM_TEST_REPORT.md  TECHNICAL_REPORT.md  VERCEL_DEPLOYMENT_FIX.md  VERCEL_DEPLOYMENT_GUIDE.md  VERIFIED_DATASET_INTEGRATION_SUMMARY.md  VISUAL_UI_TEST_REPORT.md  analysis_report.txt  (+76 more)
.next/: BUILD_ID  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
assets/: icons-52fff3e2.js  icons-52fff3e2.js.map  index-b9dd4043.js  index-b9dd4043.js.map  index-ba0b0d2f.css
backend/: =2.8.0  Dockerfile  ai_classifier.py  current_installed.txt  database.py  main.py  persian_legal_ai.db  persian_main.py  requirements.txt  scraper.py  simple_main.py  test_api.py
backup_20250908_112501/: current_python_files.txt  current_typescript_files.txt  root_directory.txt
bolt/: index.html  package-lock.json  package.json
config/: database.py  logging.py
configs/: .env.development  pyproject.toml  requirements-compatible.txt  training_config.py
configs/production/: docker-compose.production.yml
data/: persian_legal_collector.py
database/: init_db.py
deployment-helpers/: deployment-helper.sh  deployment-validator.py  health-checker.py  install-docker.sh  resource-optimizer.py
docs/: README_REAL_DATA.md  README_original.md  UPGRADE_REPORT.md  cleanup_analysis_20250908_082906.txt
frontend/: .env.development  .env.production  .gitignore  Dockerfile  Dockerfile.production  eslint.config.js  index.html  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  test_frontend.sh  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
interface/: streamlit_dashboard.py
models/: dora_trainer.py  (+1 more)
(+455 files in other folders)
